@@ -12,6 +12,7 @@ xx-xxx-2009 (LDMud Team) -- 3.5.0
          the garbage collector and would be free'd by it while still in use.
        + get_type_info() lost refcounts to the function name of a closure,
          causing it eventually being free'd prematurely (#712).
+       + 'dumpallobj' crashed if there are strings with 0 refcounts (#725).
 
     - Changed Efuns:
        + add_action(): The function can be given as a closure. (#243)
