@@ -1,6 +1,13 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+13-Feb-2010 (Zesstra)
+  - Fixed Div-by-Zero in svalue_size().
+    svalue_size() divides the memory used for a string by its refcount, but
+    0 refs are valid for strings. This leads to a crash in then wiz command
+    'dumpallobj', unless the refcount is checked before division. (#725).
+    (dumpstat.c)
+
 10-Feb-2010 (Gnomi)
   - optpat() shouldn't read over the end of the given ed command. (#722)
     (ed.c)
